--- a/course.html
+++ b/course.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> 
   
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -33,7 +33,6 @@
   <!-- JS Font File -->
   <script src="assets/vendor/font/kit_fontawesome.js" crossorigin="anonymous"></script>
   <!-- <script src="https://kit.fontawesome.com/e05bd6509b.js" crossorigin="anonymous"></script> -->
-  
 
 </head>
 
@@ -53,11 +52,11 @@
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Trang chủ</a>
+            <a class="nav-link" href="index.html">Trang chủ</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="course.html">Khoá học</a>
+            <a class="nav-link active" href="course.html">Khoá học</a>
           </li>
 
           <li class="nav-item">
@@ -70,20 +69,19 @@
   </nav><!-- End Header/Navbar -->
 <!-- </div> -->
   <!-- Form tìm kiếm -->
-  <div class="form-search">
+  <div id="form-search-CongvuSTEM" class="form-search">
     <!-- <form class="form-a"> -->
       <div class="row">
         <div class="col-md-6 mb-2">
           <div class="form-group mt-3">
-            <label class="pb-2" for="Type">Chủ đề</label>
+            <label class="pb-2" for="Type">Khóa học</label>
             <select class="form-control form-select form-control-a" id="Type">
               <option value="0">Tất cả</option>
-              <option value="1">Luyện Chuột: Nhanh Tay Lẹ Mắt</option>
-              <option value="2">Luyện Gõ Phím 10 Ngón</option>
-<!--               <option value="3">Tin Học Văn Phòng</option>
-              <option value="4">Lập Trình Scratch</option>
-              <option value="5">Robotics</option> -->
-              <option value="6">Công cụ Học và Tự Học</option>
+              <option value="4">Kỹ Năng Sử Dụng Máy Tính</option>
+              <option value="5">Tin Học Theo Chương Trình Bộ GD&ĐT</option>
+              <option value="1">Tin Học Văn Phòng</option>
+              <option value="2">Lập Trình</option>
+              <option value="3">Rototics</option>              
             </select>
           </div>
         </div>
@@ -91,8 +89,9 @@
           <div class="form-group mt-3">
             <label class="pb-2" for="city">Sắp xếp</label>
             <select class="form-control form-select form-control-a" id="city">
-              <option value="0">Mới nhất</option>
-              <option value="1">Cũ nhất</option>
+              <option value="0">Tất cả</option>
+<!--               <option value="1">Miễn phí</option>
+              <option value="2">Có phí</option> -->
             </select>
           </div>
         </div>
@@ -184,17 +183,16 @@
   
 
   <div id="preloader"></div>
-  <a href="#main" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href= "#main" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- TinHocViVu JS File -->
+  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/tinhoc_vivu.js"></script>
-  <script src="assets/js/tinhoc_vivu_1.js"></script>
-  
+  <script src="assets/js/tinhoc_vivu_course.js"></script>
+  <script src="assets/js/tinhoc_vivu_course_1.js"></script>  
 </body>
 <script src="assets/js/tinhoc_vivu_scroll.js"></script>
 </html>
